Remove security manager warning supresssion